<resources>
    <string name="app_name">ReviewFood</string>
    <string name="product">Tran Product</string>
    <string name="loading">Loading</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dangnhapbanggoogle">Dang nhap bang google</string>
    <string name="dangnhapfacebook">Dang nhap bang facebook</string>
    <string name="idfacebook">1124511524354361</string>
    <string name="quenmatkhau">Quên mật khẩu?</string>
    <string name="dangkymoi">Đăng ký mới</string>
    <string name="thongbaoloimk">Mat khau</string>
    <string name="thongbaoloinhaplai">Vui long nhap mat khau giong o tren</string>
    <string name="email">Email</string>
    <string name="thongbaoloi">Nhap lai </string>
    <string name="dangxuly">Dang xu ly</string>
    <string name="place">place</string>
    <string name="food">food</string>
    <string name="gantoi">Gan toi</string>
    <string name="giaohang">Giao hang</string>
    <string name="gameandfun">Game and fun</string>
    <string name="danhgia">Danh gia</string>
    <string name="blogs">Blogs</string>
    <string name="topmember">Top thanh vien</string>
    <string name="datmon">Dat mon</string>
    <string name="thongbaothanhcong">Thong bao thanh cong</string>
    <string name="taianh">tai anh</string>
    <string name="luulai">Luu lai</string>
    <string name="checkin">Check in</string>
    <string name="chiase">Chia se</string>
    <string name="binhluan">Binh luan</string>
    <string name="hoac">Hoặc</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="thongbaoloidangky">Bạn chưa nhập </string>
    <string name="thongbaonhaplaimatkhau">Vui lòng nhập giống mật khẩu ở trên </string>
    <string name="thongbaodangkythanhcong">Tạo tài khoản thành công </string>
    <string name="thongbaodangnhapthatbai">Tài khoản không hợp lệ !</string>
    <string name="khoiphucmatkhau">Khôi phục mật khẩu</string>
    <string name="chuoikhoiphucmatkhau">Bạn vui lòng nhập địa chỉ Email vào khung bên dưới để khôi phục mật khẩu !</string>
    <string name="guimail">Gữi email</string>
    <string name="nhaplaimatkhau">Nhập lại mật khẩu</string>
    <string name="dangky">Đăng ký</string>
    <string name="chuoithanhvien">Bạn không phải là thành viên ? </string>
    <string name="thongbaoemailkhonghople">Email không lệ !</string>
    <string name="thongbaoguimailthanhcong">Gữi email thành công !</string>
    <string name="text_gan_toi">Gần tôi</string>

    <!--bottom navigation-->
    <string name="title_home">Home</string>
    <string name="title_notification">Notify</string>
    <string name="title_profile">Profile</string>
    <string name="title_save">Note</string>
    <string name="msg_comment">Bình luận</string>
    <string name="msg_image">Hình ảnh</string>
    <string name="msg_menu">Menu</string>
    <string name="title_comment">Bình luận</string>
    <string name="txt_food_list">Món ăn</string>
    <string name="txt_drinkl_list">Nước uống</string>
    <string name="txt_viewmore">Xem thêm</string>
    <string name="title_activity_maps">Map</string>
    <string name="txt_order">Đặt món</string>
    <string name="message_hint_input_comment">Nhập nội dung bình luận (tối đa 300 kí tự)</string>

    <string name="error_message_insufficient_space">
        You have few space available, please make sure your have more than 5MB on disk to
        take pictures!</string>
    <string name="ok">Ok</string>
    <string name="error_message">Error occurred!</string>
    <string name="message_need_permission">Need Permissions</string>
    <string name="message_grant_permission">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="label_setting">GOTO SETTINGS</string>
    <string name="cancel">Cancel</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_gallery">Choose from Gallery</string>
    <string name="txt_rating_point">Chọn điểm đánh giá (yêu cầu)</string>
    <string name="txt_post">Đăng</string>
    <string name="txt_title">Tiêu đề</string>
    <string name="txt_empty_list">Danh sách rỗng</string>
    <string name="title_search">Search</string>
    <string name="title_restaurent">Restaurent</string>
    <string name="add_restaurent">Thêm quán ăn</string>
    <string name="hint_name_restaurent">Tên quán ăn</string>
    <string name="hint_address_restaurent">Địa chỉ quán ăn</string>
    <string name="hint_time_open">Giờ mở cửa</string>
    <string name="hint_time_close">Giờ đóng cửa</string>
    <string name="txt_add_image">Thêm hình ảnh quán ăn</string>
    <string name="txt_menu_restaurent">Menu Quán Ăn</string>
    <string name="txt_take_picture">Chụp hình</string>
    <string name="txt_open_library">Mở thư viện</string>
    <string name="txt_order_setting">Giao hàng</string>
    <string name="hint_name_food">Tên món ăn</string>
    <string name="hint_how_much">Giá tiền</string>
    <string name="txt_add_food_to_menu">Thêm món ăn vào menu</string>
    <string name="txt_add_restaurant">Đăng quán ăn của tôi</string>
    <string name="txt_view_menu">Xem menu quán ăn</string>
    <string name="txt_good">Ngon lắm</string>
    <string name="hint_input_comment">Nhập bình luận của bạn</string>
    <string name="txt_empty">Rỗng</string>
    <string name="txt_pick_maps">Click để chọn 1 điểm trên Maps</string>
    <string name="txt_logout">Đăng xuất</string>
    <string name="txt_login">Đăng nhập</string>
    <string name="txt_input_name_restaurant">Nhập tên quán ăn</string>
    <string name="txt_permission">Quyền truy cập:</string>
    <string name="txt_user">Tài khoản:</string>
    <string name="txt_user_name">Tên hiển thị:</string>
    <string name="txt_location">Vị trí của bạn:</string>
    <string name="txt_edit">Sửa</string>
    <string name="txt_delete">Xóa</string>
</resources>
