<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_16">

        <Spinner
            android:id="@+id/spiner_khuvuc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5" />

        <EditText
            android:id="@+id/edt_ten_quan_an"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spiner_khuvuc"
            android:layout_marginTop="@dimen/dp_15"
            android:hint="@string/hint_name_restaurent">

        </EditText>

        <EditText
            android:id="@+id/edt_dia_chi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_ten_quan_an"
            android:layout_marginTop="@dimen/dp_5"
            android:hint="@string/hint_address_restaurent"
            android:maxLines="2"
            android:paddingRight="@dimen/dp_35" />

        <ImageView
            android:id="@+id/img_open_google_maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/edt_dia_chi"
            android:layout_alignBottom="@+id/edt_dia_chi"
            android:layout_alignParentRight="true"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:src="@drawable/ic_search_location" />

        <LinearLayout
            android:id="@+id/layout_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_dia_chi">

            <TextView
                android:id="@+id/txt_giao_hang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_order_setting"
                android:textColor="@color/green" />

            <Switch
                android:id="@+id/switch_giao_hang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_5" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_order"
            android:layout_marginTop="@dimen/dp_5"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/edt_time_open"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:focusable="false"
                android:gravity="center"
                android:hint="@string/hint_time_open"
                android:inputType="number"
                android:maxLength="5"
                android:textColorHint="@color/orange" />

            <EditText
                android:id="@+id/edt_time_close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:focusable="false"
                android:gravity="center"
                android:hint="@string/hint_time_close"
                android:inputType="number"
                android:maxLength="5"
                android:textColorHint="@color/orange" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_time"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/txt_add_image"
            android:textSize="@dimen/dp_20"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout_take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_image"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_photo_camera_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_take_picture" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_open_library"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/layout_take_photo"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_toRightOf="@id/layout_take_photo"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_take_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_image"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_photo_camera_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_open_library" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_image_quan_an"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:layout_below="@id/layout_take_photo"
            android:layout_marginTop="@dimen/dp_15" />


        <Button
            android:id="@+id/btn_changing_quan_an"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recycler_image_quan_an"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/colorAccent"
            android:text="@string/txt_add_restaurant"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_circle"
            android:indeterminate="false"
            android:max="100"
            android:visibility="gone"
            android:progress="1" />
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
