<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dp_16">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:text="Giao hàng" />

            <Switch
                android:id="@+id/switch_giao_hang"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recycler_image_quan_an"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/txt_menu_restaurent"
            android:textSize="@dimen/dp_20"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/layout_input_monan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_menu"
            android:layout_marginTop="@dimen/dp_10">

            <LinearLayout
                android:id="@+id/layout_img_mon_an"
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_80"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@drawable/dotted_border"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_mon_an"
                    android:layout_width="@dimen/dp_60"
                    android:layout_height="@dimen/dp_60"
                    android:layout_gravity="center"
                    android:padding="@dimen/dp_8"
                    android:src="@drawable/ic_add_circle_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="image" />
            </LinearLayout>

            <EditText
                android:id="@+id/edt_ten_mon_an"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/layout_img_mon_an"
                android:hint="@string/hint_name_food"
                android:paddingLeft="@dimen/dp_10" />

            <EditText
                android:id="@+id/edt_gia_tien"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_ten_mon_an"
                android:layout_alignLeft="@id/edt_ten_mon_an"
                android:paddingLeft="@dimen/dp_10"
                android:hint="@string/hint_how_much" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_add_mon_an"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/layout_input_monan"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/txt_add_food_to_menu" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_add_mon_an"
            android:layout_marginTop="@dimen/dp_15" />

        <Button
            android:id="@+id/btn_add_quan_an"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/recycler_menu"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/colorAccent"
            android:text="@string/txt_add_food_to_menu"
            android:textColor="@color/white" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
