<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200"
        android:src="@color/colorfacebook" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200"
        android:background="@color/black_transparent3" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar_user"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_150"
        android:src="@drawable/placeholder" />

    <LinearLayout
        android:id="@+id/layout_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_avatar_user"
        android:layout_marginTop="@dimen/dp_10"
        android:padding="@dimen/dp_5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_user_name"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/txt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_10"
            android:text="Tran Quang"
            android:textColor="@color/red5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_user_name"
        android:padding="@dimen/dp_5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_user"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/txt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_10"
            android:text="tdquang252@gmail.com"
            android:textColor="@color/red5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_user"
        android:padding="@dimen/dp_5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_permission"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/txt_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_10"
            android:text="Người dùng"
            android:textColor="@color/red5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_permission"
        android:padding="@dimen/dp_5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_location"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/txt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:paddingLeft="@dimen/dp_10"
            android:textColor="@color/red5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_detail_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_location"
        android:padding="@dimen/dp_5"
        android:weightSum="2">

        <TextView
            android:id="@+id/txt_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="20"
            android:text="Latitude: "
            android:textColor="@color/red5" />

        <TextView
            android:id="@+id/txt_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="21"
            android:paddingLeft="@dimen/dp_10"
            android:text="Longitude: "
            android:textColor="@color/red5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout__update_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_detail_location"
        android:padding="@dimen/dp_5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Cập nhật lại vị trí của bạn:"
            android:textSize="@dimen/sp_12" />

        <ImageView
            android:id="@+id/img_update_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:src="@drawable/ic_location_home" />
    </LinearLayout>


    <TextView
        android:id="@+id/txt_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_60"
        android:background="@drawable/bg_button_border_blue"
        android:padding="@dimen/dp_15"
        android:text="@string/txt_logout" />
</RelativeLayout>